--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ footer {
 
 #result-section {
   background-color: #EE7658;
-  padding: 3% 15%;
+  padding: 3% 12%;
   text-align: center;
   color: #fff;
 }
@@ -92,6 +92,10 @@ footer {
 
   #calculator {
     padding: 3% 3%;
+  }
+  
+  #result-section {
+    padding: 3% 6%;
   }
 
   .large-screen {
